API Delete Ingredient
